tests/NormalTests/paczka1/fuzzy1/98834303.err
Error in line 1: S228 S228 7,41
Error in line 6: S228 S228 8,5
Error in line 9: S228 S667 3,8
Error in line 19: 6iuwbYW8V A109 64,5
Error in line 33: iZ85ZlHugN S228 23,5
Error in line 40: Zj4IB9jr S667 -1,9
